[package]
name = "blog-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
async-trait = "0.1.51"
serde = "1.0.131"
serde_json = "1.0.72"
dyn-clone = "1.0.4"
validator = "0.14.0"
with_deps_proc_macro = { git = "https://github.com/ehsan2003/with_deps" }
chrono = "0.4.19"
slug = "0.1.4"